# InHouseROS

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md
include/: GenericSHMPublisher.hpp  GenericSHMSubscriber.hpp  PacketSender.hpp  SharedMemoryPublisher.hpp  SharedMemorySubscriber.hpp  TCPReceiver.hpp  TCPSender.hpp  UDPReceiver.hpp  UDPSender.hpp  WebRTCCallee.hpp  WebRTCCaller.hpp
misc/: kinematics.cpp
robotics-algorithms/: CMakeLists.txt  README.md
robotics-algorithms/examples/: CMakeLists.txt  arm_3d_demo.cpp  arm_kinematics_demo.cpp  astar_visualizer.cpp  control_demo.cpp  hello_robotics.cpp  kalman_demo.cpp  mapping_demo.cpp  mpc_demo.cpp  n_arm_demo.cpp  navigation_demo.cpp  pf_demo.cpp  pid_visualizer.cpp  planning_demo.cpp  prm_demo.cpp  rrt_demo.cpp  rrt_star.cpp  six_dof_demo.cpp  state_machine_demo.cpp  voxel_demo.cpp
robotics-algorithms/include/robotics_algo/common/: types.hpp
robotics-algorithms/include/robotics_algo/common/math/: transform.hpp
robotics-algorithms/include/robotics_algo/control/: pid.hpp  pure_pursuit.hpp
robotics-algorithms/include/robotics_algo/control/mpc/: mpc_solver.hpp
robotics-algorithms/include/robotics_algo/decision/fsm/: state_machine.hpp
robotics-algorithms/include/robotics_algo/kinematics/: arm_3d.hpp  n_link_arm.hpp  six_link_arm.hpp  two_link_arm.hpp
robotics-algorithms/include/robotics_algo/localization/: kalman_filter_1d.hpp  particle_filter.hpp
robotics-algorithms/include/robotics_algo/perception/: occupancy_grid.hpp  voxel_grid.hpp
robotics-algorithms/include/robotics_algo/planning/graph_search/: astar.hpp  grid_map.hpp
robotics-algorithms/include/robotics_algo/planning/sampling_based/: prm.hpp  rrt.hpp  rrt_star.hpp
robotics-algorithms/include/robotics_algo/simulators/viz/: graph_visualizer.hpp
robotics-algorithms/src/: CMakeLists.txt
robotics-algorithms/src/common/: math_utils.cpp
robotics-algorithms/src/control/: mpc.cpp  pid.cpp  pure_pursuit.cpp
robotics-algorithms/src/decision/fsm/: state_machine.cpp
robotics-algorithms/src/kinematics/: arm_3d.cpp  n_link_arm.cpp  six_link_arm.cpp  two_link_arm.cpp
robotics-algorithms/src/localization/: kalman_filter_1d.cpp  particle_filter.cpp
robotics-algorithms/src/perception/: occupancy_grid.cpp  voxel_grid.cpp
robotics-algorithms/src/planning/graph_search/: astar.cpp
robotics-algorithms/src/planning/sampling_based/: prm.cpp  rrt.cpp  rrt_star.cpp
robotics-algorithms/src/simulators/viz/: graph_visualizer.cpp
robotics-algorithms/tests/: CMakeLists.txt  test_math.cpp  test_pid.cpp
src/: SharedMemoryPublisher.cpp  SharedMemorySubscriber.cpp  genericPub.cpp  main.cpp  publisher.cpp  receiver.cpp  subscriber.cpp
src/algos/: README.md
src/comms/: TCPReceiver.cpp  TCPSender.cpp  UDPReceiver.cpp  UDPSender.cpp
src/minecraft/: CMakeLists.txt  minecraft_lite.cpp
src/mqtt/: Makefile  docker-compose.yml  mqtt_pub.cpp  mqtt_sub.cpp
src/planner/: CMakeLists.txt  Common.h  PRM.cpp  PRM.h  RRT.cpp  RRT.h  main.cpp
src/programs/: dualPubSub.cpp  genericSub.cpp  pubSub.cpp  sender.cpp  subscriber.cpp  tcpReceiver.cpp  tcpSender.cpp  webRTCPub.cpp  webRTCSub.cpp
src/pubSub/: SharedMemorySubscriber.cpp
src/raycaster/: CMakeLists.txt  README.md  ekf.cpp  raycaster.cpp  raycaster_advanced.cpp  slam.cpp
src/webrtc/: Makefile  README.md  WebRTCCallee.cpp  WebRTCCaller.cpp  callee.cpp  caller.cpp
src/zmq/: Makefile  zmq_pub.cpp  zmq_sub.cpp
v2/: CMakeLists.txt  README.md
v2/core/: README.md
v2/core/messaging/: broker.cpp  broker.hpp  message.hpp  publisher.hpp  subscriber.hpp
v2/core/runtime/: executor.cpp  executor.hpp  node.hpp
v2/core/tools/: topic_viewer.cpp
v2/examples/: logger_node.cpp  odometry_node.cpp
